<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RocketChallenge</string>
    <string name="hello_world">Welcome! tap to continue</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_seearch_result">SeearchResultActivity</string>
    <string name="button_search">Search</string>
    <string name="button_sort_popularity">popularity</string>
    <string name="button_sort_price">price</string>
    <string name="button_sort_name">name</string>
    <string name="button_sort_brand">brand</string>
    <string name="sort_elements_by">Sort elements by</string>

</resources>
