<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SearchFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_elements_by"
        android:id="@+id/sort_by_description" />

    <Button
        android:id="@+id/sort_popularity_button"
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sort_by_description"
        android:text="@string/button_sort_popularity" />

    <Button
        android:id="@+id/sort_price_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/button_sort_price"
        android:layout_alignBottom="@id/sort_popularity_button"
        android:layout_below="@id/sort_by_description"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/sort_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/button_sort_name"
        android:layout_below="@+id/sort_popularity_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/sort_brand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/button_sort_brand"
        android:layout_alignBottom="@id/sort_name_button"
        android:layout_alignParentRight="true" />

</RelativeLayout>
